# vimdow

./: .gitignore  LICENSE  README.md  build.sh  run.sh
.github/: FUNDING.yml
.github/workflows/: release.yml
godot/: FiraCodeNerdFont-Regular.ttf.import  FiraCodeNerdFontMono-Bold.ttf.import  export_presets.cfg  icon.svg.import  non_multigrid.tscn  project.godot  restart.gd  restart.gd.uid  vimdow.gdextension  vimdow.gdextension.uid  vimdow_editor.gd  vimdow_editor.gd.uid  vimdow_editor.tscn  vimdow_theme.tres
godot/addons/: vimdow_debugger.gd.uid
godot/addons/TaskRunner/: CONTRIBUTING.md  LICENSE.md  README.md  TaskRunnerCLI.gd  TaskRunnerCLI.gd.uid  icon.png.import  icon.svg.import  plugin.cfg  plugin.gd  plugin.gd.uid
godot/addons/TaskRunner/Core/: CliArgs.gd  CliArgs.gd.uid  CommonTaskTypes.gd  CommonTaskTypes.gd.uid  DebugHelper.gd  DebugHelper.gd.uid  Task.gd  Task.gd.uid  TaskRun.gd  TaskRun.gd.uid  TaskRunner.gd  TaskRunner.gd.uid  (+2 more)
godot/addons/vimdow/: .stylua.toml  FiraCodeNerdFont-Regular.ttf.import  FiraCodeNerdFontMono-Bold.ttf.import  icon.svg.import  non_multigrid.tscn  plugin.cfg  vimdow.gd  vimdow.gd.uid  vimdow.gdextension  vimdow_debugger.gd  vimdow_debugger.gd.uid  vimdow_editor.gd  vimdow_editor.tscn  vimdow_theme.tres
godot/tasks/: run_vimdow_standalone.gd  run_vimdow_standalone.gd.uid
rust/: Cargo.toml
rust/src/: err.rs  highlights.rs  lib.rs  neovim.rs
rust/src/neovim/: ext_types.rs  key_events.rs  mouse_events.rs  msgpack.rs  process.rs
test/: hl_attr_test.lua
test/configs/: example.cfg
test/nvim_styles/: hl_attr_test.lua
(+69 files in other folders)
